# portfolio-monalisa

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  .prettierignore  CHANGELOG.md  Dockerfile  README.md  app.vue  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  eslint.config.mjs  index.html  locations.yml  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  quotes.yml  tailwind.config.js  tailwind.config.ts
.changeset/: angry-garlics-love.md  beige-birds-tap.md  big-turkeys-thank.md  big-vans-happen.md  blue-days-explain.md  calm-baths-work.md  clever-boxes-cough.md  cyan-donkeys-sort.md  famous-keys-heal.md  funny-candles-fly.md  funny-knives-shop.md  giant-lobsters-watch.md  hungry-otters-serve.md  itchy-walls-reply.md  khaki-maps-care.md  lemon-tools-shake.md  little-clouds-leave.md  little-keys-shout.md  long-fishes-chew.md  long-planets-smile.md  lucky-ads-relate.md  lucky-cars-argue.md  metal-houses-shout.md  metal-ways-burn.md  nine-mugs-whisper.md  nine-onions-shake.md  perfect-news-deny.md  polite-colts-rest.md  polite-knives-tease.md  proud-llamas-hang.md  quiet-knives-admire.md  quiet-spies-grab.md  real-zoos-grin.md  selfish-coins-hang.md  sharp-poems-promise.md  short-rice-divide.md  soft-mayflies-arrive.md  spotty-countries-jog.md  stale-snails-remain.md  thick-items-push.md  (+7 more)
app/: app.vue
components/: AppFooter.vue  AppHeader.vue  AppInstallPrompt.vue  AppNavbar.vue  CTAButton.vue  LocationCard.vue  Navbar.vue  NewsletterBox.vue  VideoCard.vue  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
(+84 files in other folders)
