[package]
name = "portfolio-monalisa"
description = "Monalisa's portfolio showcasing her experience and contacts in a visually appealing manner"
authors = ["Shirsendu Bairagi <shirsendu2001@gmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/shba007/portfolio-monalisa.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
tauri = { version = "2.10.2", features = [] }
tauri-plugin-log = "2.8.0"
